# detect-secrets-async

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  semantic-pr.yml
scripts/: benchmark_runtime.py  soak_runtime.py
src/detect_secrets_async/: __init__.py  _config.py  _detect_secrets.py  _errors.py  _models.py  _runtime.py  _worker.py
tests/: conftest.py  test_detect_secrets.py  test_models.py  test_package.py  test_runtime.py  test_worker.py
